--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,21 +1,41 @@
 {
-    "name": "Leaf Disease Analyzer",
-    "short_name": "LeafScan",
-    "description": "Analyze leaf disease severity using image processing.",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#e0f7fa",
-    "theme_color": "#007bff",
-    "icons": [
+  "short_name": "LeafScan",
+  "name": "LeafScan",
+  "id": "com.leafscan.app",
+  "description": "Analyze leaf diseases and calculate severity with ease.",
+  "start_url": "/",
+  "scope": "/",
+  "dir": "ltr",
+  "lang": "en",
+  "orientation": "portrait",
+  "display": "standalone",
+  "theme_color": "#006400",  // Dark green, fits a leaf theme
+  "background_color": "#FFFFFF",  // White for clean loading
+  "icons": [
+    {
+      "src": "/static/icons/192/icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/icons/512/icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "New Analysis",
+      "url": "/",
+      "icons": [
         {
-            "src": "/static/icons/icon-192x192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "/static/icons/icon-192x192.png",
-            "sizes": "512x512",
-            "type": "image/png"
+          "src": "/static/icons/192/icon.png",
+          "sizes": "192x192",
+          "type": "image/png"
         }
-    ]
+      ]
+    }
+  ],
+  "categories": ["productivity", "science"]
 }
