--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,12 +13,12 @@
   "background_color": "#FFFFFF",  // White for clean loading
   "icons": [
     {
-      "src": "/static/icons/192/icon.png",
+      "src": "/static/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/icons/512/icon.png",
+      "src": "/static/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
@@ -30,7 +30,7 @@
       "url": "/",
       "icons": [
         {
-          "src": "/static/icons/192/icon.png",
+          "src": "/static/icons/icon-192x192.png",
           "sizes": "192x192",
           "type": "image/png"
         }
