--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,9 +4,13 @@
   "id": "com.leafscan.app",
   "description": "Analyze leaf diseases and calculate severity with ease.",
   "start_url": "/",
+  "scope": "/",
+  "dir": "ltr",
+  "lang": "en",
+  "orientation": "portrait",
   "display": "standalone",
-  "theme_color": "#006400",
-  "background_color": "#FFFFFF",
+  "theme_color": "#006400",  // Dark green, fits a leaf theme
+  "background_color": "#FFFFFF",  // White for clean loading
   "icons": [
     {
       "src": "/static/icons/icon-192x192.png",
@@ -14,9 +18,24 @@
       "type": "image/png"
     },
     {
-      "src": "/static/icons/icon-512x512.png",
+      "src": /static/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ]
+  ],
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "New Analysis",
+      "url": "/",
+      "icons": [
+        {
+          "src": "/static/icons/icon-192x192.png",
+          "sizes": "192x192",
+          "type": "image/png"
+        }
+      ]
+    }
+  ],
+  "categories": ["productivity", "science"]
 }
